--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
    <h1>
-       {{ controller_name }}
+       <a href="{{ link('base/index') }}">{{ controller_name }}</a>
    </h1>
 
     <ul>
@@ -10,6 +10,14 @@
             <li>{{ category.title }}</li>
         {% endfor %}
     </ul>
+
+    <form method="post">
+        <label>
+            User
+            <input type="text" name="user">
+        </label>
+        <button type="submit" name="submit">Absenden</button>
+    </form>
 
 {{ flash.show|raw }}
 
