--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -19,6 +19,14 @@
         <button type="submit" name="submit">Absenden</button>
     </form>
 
+    <form method="get">
+        <label>
+            User
+            <input type="text" name="user">
+        </label>
+        <button type="submit" name="submit">Absenden</button>
+    </form>
+
 {{ flash.show|raw }}
 
 
