put Twig Class Construction into View Class

--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -20,9 +20,11 @@
         <button type="submit" name="submit">Absenden</button>
     </form>
 
-    <form method="get">
+    <hr>
+
+    <form method="post">
         <label>
-            User
+            User (ohne CSRF)
             <input type="text" name="user">
         </label>
         <button type="submit" name="submit">Absenden</button>
