--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -1,37 +1,46 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-   <h1>
-       <a href="{{ link('base/index') }}">{{ controller_name }}</a>
-   </h1>
+    <div class="uk-padding">
+        {{ flash.show|raw }}
+        <h1 class="">{{ controller_name }}</h1>
 
-    <ul>
-        {% for category in categories %}
-            <li>{{ category.title }}</li>
-        {% endfor %}
-    </ul>
+        <div class="uk-flex uk-flex-left">
+            <a href="{{ link('base/new') }}" class="uk-button uk-button-default">Neue Kategorie</a>
+            <form method="post">
+                <input type="hidden" name="csrf_token" value="{{ session.get('csrf_token') }}">
+                <input type="hidden" name="item" value="category">
+                <button type="submit" name="action" value="truncate" class="uk-button uk-button-danger">Tabelle leeren</button>
+            </form>
+        </div>
 
-    <form method="post">
-        <label>
-            User (mit CSRF)
-            <input type="text" name="user">
-        </label>
-        <input type="hidden" name="csrf_token" value="{{ session.get('csrf_token') }}">
-        <button type="submit">Absenden</button>
-    </form>
-
-    <hr>
-    <hr>
-
-    <form method="post">
-        <label>
-            User (ohne CSRF)
-            <input type="text" name="user">
-        </label>
-        <button type="submit">Absenden</button>
-    </form>
-
-{{ flash.show|raw }}
-
-
+        <table class="uk-table uk-table-hover uk-table-small">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Meta</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for category in categories %}
+                <tr>
+                    <td>{{ category.id }}</td>
+                    <td>{{ category.title }}</td>
+                    <td>{{ category.meta }}</td>
+                    <td>
+                        <div class="uk-flex uk-flex-left">
+                            <form method="post">
+                                <input type="hidden" name="csrf_token" value="{{ session.get('csrf_token') }}">
+                                <input type="hidden" name="item" value="{{ category.id }}">
+                                <button type="submit" name="action" value="remove" class="uk-button uk-button-small uk-button-danger">Eintrag löschen</button>
+                            </form>
+                        </div>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
