--- a/templates/messages/message.html.twig
+++ b/templates/messages/message.html.twig
@@ -1,3 +1,4 @@
-<div class="alert alert-{{ type }}">
+<div class="uk-alert-{{ type }}" uk-alert>
+    <a class="uk-alert-close" uk-close></a>
     <p>{{ message }}</p>
 </div>
