--- a/templates/messages/message.html.twig
+++ b/templates/messages/message.html.twig
@@ -1,4 +1,4 @@
-<div class="uk-dark uk-background-secondary uk-alert-{{ type }}" uk-alert>
+<div class="uk-background-secondary uk-alert-{{ type }}" uk-alert>
     <a class="uk-alert-close" uk-close></a>
     <p>{{ message }}</p>
 </div>
