--- a/templates/base/new.html.twig
+++ b/templates/base/new.html.twig
@@ -5,14 +5,20 @@
 {% endblock %}
 
 {% block body %}
-    <h2>Eintrag anlegen</h2>
+    <section class="uk-section uk-section-small uk-section-primary">
+        <div class="uk-container">
+            <h2>Eintrag anlegen</h2>
+        </div>
+    </section>
+    <section class="uk-section uk-section-small uk-section-muted">
+        <div class="uk-container">
+            {{ flash.show|raw }}
 
-    {{ flash.show|raw }}
+            <p>
+                <a href="{{ route('base/index') }}">Zurück zur Übersicht</a>
+            </p>
 
-    <p>
-        <a href="{{ route('base/index') }}">Zurück zur Übersicht</a>
-    </p>
-
-    {{ include('base/_form.html.twig') }}
-
+            {{ include('base/_form.html.twig') }}
+        </div>
+    </section>
 {% endblock %}
