--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,4 +1,5 @@
 @import "~uikit/dist/css/uikit.min.css";
+@import "~tablesorter/dist/css/theme.default.min.css";
 
 form label.required:after
 {
@@ -8,5 +9,16 @@ form label.required:after
 
 html, body {
     min-height: 100%;
-    background-color: #222;
+}
+
+.tablesorter{
+    font: 14px/18px Sans-serif!important;
+}
+
+.tablesorter thead .disabled {
+    display:none;
+}
+
+.tablesorter tbody td{
+    padding: 8px 16px!important;
 }
