--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1">
@@ -29,18 +29,25 @@
             {{ get_entry_link_tags('app')|raw }}
         {% endblock %}
     </head>
-    <body class="uk-background-secondary uk-light">
-        <div class="uk-container-expand uk-padding">
-            <h1>Ringhorn Framework Playground</h1>
-            <p>Diese Seite wurde mit Ringhorn entwickelt. Details und Weitere Infos über Ringhorn Framework für PHP findest du unter <a href="https://www.vapita.de">www.vapita.de</a></p>
-            {% block body %}{% endblock %}
-            <div class="uk-margin-large-top">
-                <a href="https://www.vapita.de/kontakt" class="uk-button uk-button-small uk-button-default">Kontakt aufnehmen</a>
-                <h5 class="uk-margin-remove-bottom">Verantwortlich für den Betrieb der Website:</h5>
-                <p class="uk-margin-remove-top">Siehe <a href="https://www.vapita.de">Impressum auf vapita.de</a>.</p>
+    <body>
+        <nav class="uk-navbar-container" uk-navbar>
+                    <div class="uk-navbar-left">
+                        {% block navigation_left %}
+                            <ul class="uk-navbar-nav">
+                                <li class=""><a href="{{ route('base/index') }}">Base</a></li>
+                                <li><a href="{{ route('timetable/index') }}">Timetable</a></li>
+                            </ul>
+                        {% endblock %}
+                    </div>
+        </nav>
+        {% block body %}{% endblock %}
+        <section class="uk-section uk-section-small uk-section-secondary">
+            <div class="uk-container">
+                <p>Das Impressum findest du auf <a href="https://www.vapita.de/impressum">vapita.de</a></p>
             </div>
+        </section>
 
-        </div>
+
 
         {% block javascripts %}
             {{ get_entry_script_tags('app')|raw }}
