--- a/templates/base/_delete_form.html.twig
+++ b/templates/base/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" class="" action="{{ route('base/delete', {'id': category.id}) }}" onsubmit="return confirm('Dieses Element wirklich löschen?');">
-    <input type="hidden" name="csrf_token" value="{{ session.get('csrf_token') }}">
+    <input type="hidden" name="csrf_token" value="{{ app.csrf_token }}">
     <button class="uk-button {{ class|default('uk-button-danger uk-margin-bottom') }}">{{ button|default('löschen')|raw }}</button>
 </form>
