added feature to help validate passwords and users; added translation feature

--- a/templates/messages/message.html.twig
+++ b/templates/messages/message.html.twig
@@ -1,4 +1,4 @@
 <div class="uk-alert uk-alert-{{ type }}" uk-alert>
     <a class="uk-alert-close" uk-close></a>
-    <p>{{ message }}</p>
+    <p>{{ trans[message] }}</p>
 </div>
